--- a/microserviceuser/user/pom.xml
+++ b/microserviceuser/user/pom.xml
@@ -69,6 +69,12 @@
             <!--<scope>test</scope>-->
         </dependency>
 		
+		<dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>0.9</version>
+</dependency>
+		
 <!-- jpa -->
 <dependency>
       <groupId>org.springframework.data</groupId>
