--- a/microservicebuyer/order/src/main/resources/application.yml
+++ b/microservicebuyer/order/src/main/resources/application.yml
@@ -20,11 +20,12 @@ spring:
        ddl-auto: update
   main:
     allow-bean-definition-overriding: true 
-
 app-item:
   ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
-    
+feign:
+  hystrix:
+    enabled: true
 eureka:
   client:
     service-url:
